# Claude-s-Pet-Kiisu-CPK

./: .gitignore  CONTRIBUTING.md  CREDITS.md  LICENSE  README.md  ROADMAP.md  SETUP.md  pyproject.toml  requirements.txt
.dolphintank/: 01-brief.md  02-state.md  03-active.md  04-decisions.md  05-dont-rebuild.md
cfc/: application.fam  cfc.c
docs/: AI_KNOWLEDGE_BASE.md  KIISU_DEEP_KNOWLEDGE.md  MISSIONS_COOKBOOK.md  MORNING_KIT.md  SETUP_REQUIREMENTS_mntm-dev.md  api_reference.md  architecture.md  claude_setup.md  for_ai_contributors.md  module_development.md  protobuf_rpc.md  wifi_dev_board.md
docs/_abandoned/: README.md  cfc_build_guide.md  cfc_fap_specification.md  cfc_protobuf_schema.md
docs/decisions/: DAY10_PHASE2_5_DESIGN.md  DAY11_PHASE3_SPEC.md  DAY1_BLE_PROBE.md  DAY2_APP_RPC_AND_INPUT.md  DAY3_DESKTOP_RPC_AND_POLISH.md  DAY4_STORAGE_WRITE_FIX_AND_JS_RUN.md  DAY7_LIVE_FIRE_MORNING_KIT.md  DAY8_FAP_PHASE1_SPEC.md  DAY8_FAP_VISION.md  DAY9_PHASE2_COOK_LOG.md
examples/: 01_hello_flipper.md  02_first_mission.js  03_mission_template.js  04_using_flipper_js_run.py  05_button_navigation.md  06_adding_a_new_tool.md  07_structured_logs.js  08_for_your_own_AI.md  09_mjs_cheat_sheet.md  README.md  wifi_music_example.py
examples/minimal_module/: README.md  __init__.py  module.py
examples/transports/: README.md  wifi_music_example.py
experiments/ble_probe/: PROBE_RESULTS.md  probe_q0_q1.py  probe_q2.py  probe_q3.py  probe_q3_v2.py  probe_q4.py  reconnect_check.py
flipper_mcp/: __init__.py
flipper_mcp/cli/: __init__.py  main.py
flipper_mcp/core/: __init__.py  flipper_client.py  protobuf_rpc.py  registry.py  rpc.py  server.py  utils.py
flipper_mcp/modules/: __init__.py  base_module.py
flipper_mcp/tools/: kill_stale.py
missions/handshake/: ble_passive_scan.js  flipper_info.js  gpio_full_read.js  radio_handshake.js  subghz_quick_scan.js
missions/llmdr/: __init__.py  cli.py
notebooklm/cfc/medium/host-clients/flipper-rpc-rust/: AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  flake.nix  rust-toolchain.toml
notebooklm/cfc/medium/host-clients/flipper-rpc-rust/examples/serial/: av.rs  file.rs
notebooklm/cfc/medium/host-clients/flipper-rpc-rust/src/: error.rs  fs.rs  lib.rs  logging.rs  proto.rs  rpc.rs  transport.rs
notebooklm/cfc/medium/host-clients/flipper-rpc-rust/src/fs/: create_dir.rs  helpers.rs  md5.rs  metadata.rs  read.rs  read_dir.rs  remove.rs  tar.rs  write.rs
notebooklm/cfc/medium/host-clients/flipper-rpc-rust/src/proto/: app.rs  desktop.rs  flipper.rs  gpio.rs  gui.rs  property.rs  storage.rs  system.rs
notebooklm/cfc/medium/host-clients/flipper-rpc-rust/src/rpc/: error.rs  req.rs  res.rs
notebooklm/cfc/medium/host-clients/flipper-rpc-rust/src/transport/: serial.rs
notebooklm/cfc/medium/host-clients/flipper-rpc-rust/src/transport/serial/: cli.rs  helpers.rs  rpc.rs
recon/: PHASE1_SUMMARY.md  phase1_js_modules.md
scripts/: _deploy_cfc_fap.py
tests/cfc_phase2/: conftest.py  test_assembling_timeout.py  test_async_event_consumed_during_drain.py  test_broadcast_path_mock.py  test_cfc_timeout_returns_none.py  test_chunked_ping_roundtrip.py  test_meta_capabilities.py  test_meta_version.py  test_msgpack_roundtrip.py  test_negative_bad_fragment_index.py  test_negative_bad_magic.py  test_negative_bad_version.py  test_negative_malformed_msgpack.py  test_negative_orphan_fragment.py  test_negative_oversized_frame_data.py  test_negative_oversized_payload.py  test_negative_unknown_opcode.py  test_negative_zero_fragment_total.py  test_non_cfc_frame_raises_desync.py  test_ping_roundtrip.py  test_recovery_after_bad_frame.py  test_reset_during_assembling.py  test_reset_returns_idle.py  test_stale_transaction.py
tests/missions/: test_storage_health_check.py
tests/phase3/: _helpers.py  conftest.py  live_fire_nfc.py  live_fire_nfc_mock.py  test_broadcast_chaos.py  test_nfc_diag_reroute.py  test_reader_reassembles_multi_fragment_response.py  test_reader_routes_cfc_by_txn.py  test_reader_unknown_tag_desyncs.py  test_subghz_decode_and_drops.py  test_subscribe_listen_unsubscribe.py  test_subscription_overflow_drops_oldest.py
tests/tools/: test_kill_stale.py  test_usb_atexit.py
(+183 files in other folders)
